<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_sort"
        android:title="@string/top_rated"
        app:showAsAction="always|withText">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_pop"
                    android:checked="true"
                    android:onClick="onGroupMenuSelected"
                    android:title="@string/popular" />
                <item
                    android:id="@+id/menu_sort_top"
                    android:onClick="onGroupMenuSelected"
                    android:title="@string/top_rated" />
                <item
                    android:id="@+id/menu_all"
                    android:onClick="onGroupMenuSelected"
                    android:title="@string/all" />
                <item
                    android:id="@+id/menu_favourites"
                    android:onClick="onGroupMenuSelected"
                    android:title="@string/favourites" />
            </group>
        </menu>
    </item>


</menu>