<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_welcome"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to"
        android:textColor="#01d277"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="#01d277"
        android:textSize="44sp" />

    <TextView
        android:id="@+id/tv_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingBottom="48dp"
        android:text="@string/by_mnunezdm"
        android:textColor="#01d277"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/iv_powered_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/powered_by"
        android:paddingBottom="48dp"
        app:srcCompat="@mipmap/powered" />

    <ProgressBar
        android:id="@+id/pb_fetching_welcome"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/tv_fetching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fetching"
        android:textColor="#01d277"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_connectivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/connectivity_issues"
        android:textColor="@color/colorError"
        android:textSize="16sp"
        android:visibility="invisible" />
</LinearLayout>

